grammar.js
    source_file: ($) => repeat($._statement),

    _statement: ($) =>
      choice(
        // Block constructs (no period needed for the wrapper)
        $._block_statement,
        // Regular period-terminated statements
        seq($._statement_body, "."),
        // Chained statements: KEYWORD: item1, item2.
        $.chained_statement,
      ),

    _identifier_chars: (_$) => /[a-zA-Z_][a-zA-Z0-9_]*/,

    identifier: ($) =>
      choice($._identifier_chars, $.namespace_identifier),

    _expression: ($) =>
      choice(
        $._literal,
        $.identifier,
        $.field_symbol,
        $.parenthesized_expression,
        $.unary_expression,
        $.binary_expression,
        $.component_access,
        $.method_call_expression,
        $.dynamic_reference,
        $.table_expression,
        $.new_expression,
        $.value_expression,
        $.ref_expression,
        $.conv_expression,
        $.cast_expression,
        $.exact_expression,
        $.corresponding_expression,
        $.cond_expression,
        $.switch_expression,
        $.filter_expression,
        $.reduce_expression,
        $.inline_data_declaration,
        $.inline_field_symbol,
        $.predicate_expression,
      ),

    parenthesized_expression: ($) => seq("(", $._expression, ")"),

    unary_expression: ($) =>
      choice(
        prec(PREC.UNARY, seq("-", $._expression)),
        prec(PREC.NOT, seq(kw("NOT"), $._expression)),
        prec(PREC.BIT_NOT, seq(kw("BIT-NOT"), $._expression)),
      ),

    binary_expression: ($) =>
      choice(
        prec.right(PREC.POWER, seq($._expression, "**", $._expression)),
        prec.left(PREC.MUL, seq($._expression, "*", $._expression)),
        prec.left(PREC.MUL, seq($._expression, "/", $._expression)),
        prec.left(PREC.MUL, seq($._expression, kw("MOD"), $._expression)),
        prec.left(PREC.MUL, seq($._expression, kw("DIV"), $._expression)),
        prec.left(PREC.ADD, seq($._expression, "+", $._expression)),
        prec.left(PREC.ADD, seq($._expression, "-", $._expression)),
        prec.left(PREC.CONCAT, seq($._expression, "&&", $._expression)),
        prec.left(PREC.BIT_AND, seq($._expression, kw("BIT-AND"), $._expression)),
        prec.left(PREC.BIT_OR, seq($._expression, kw("BIT-OR"), $._expression)),
        prec.left(PREC.BIT_OR, seq($._expression, kw("BIT-XOR"), $._expression)),
        prec.left(PREC.COMPARE, seq($._expression, $._comparison_operator, $._expression)),
        prec.left(PREC.AND, seq($._expression, kw("AND"), $._expression)),
        prec.left(PREC.OR, seq($._expression, kw("OR"), $._expression)),
        prec.left(PREC.EQUIV, seq($._expression, kw("EQUIV"), $._expression)),
      ),

    _comparison_operator: (_$) =>
      choice(
        "=", "<>", "<", ">", "<=", ">=",
        kw("EQ"), kw("NE"), kw("LT"), kw("GT"), kw("LE"), kw("GE"),
        kw("CO"), kw("CN"), kw("CA"), kw("CS"),
        kw("NA"), kw("NS"), kw("CP"), kw("NP"),
      ),

    component_access: ($) =>
      prec.left(PREC.MEMBER, seq(
        $._expression,
        choice("->", "=>", "~"),
        choice($.identifier, $.dynamic_reference),
      )),

    method_call_expression: ($) =>
      prec(PREC.CALL, seq(
        choice($.identifier, $.field_symbol, $.component_access),
        $.argument_list,
      )),

    argument_list: ($) =>
      seq("(", optional($._argument_list_body), ")"),

    _argument_list_body: ($) =>
      choice($._expression, commaSep1($.named_argument)),

    _type_spec: ($) =>
      choice(
        seq(kw("TYPE"), $._type_expression),
        seq(kw("LIKE"), $._type_expression),
        seq(kw("TYPE"), kw("REF"), kw("TO"), $._type_expression),
        seq(kw("LIKE"), kw("REF"), kw("TO"), $._type_expression),
        seq(kw("TYPE"), $._table_type),
        seq(kw("LIKE"), $._table_type),
        seq(kw("TYPE"), kw("RANGE"), kw("OF"), $._type_expression),
        seq(kw("TYPE"), kw("LINE"), kw("OF"), $._type_expression),
      ),

    data_statement: ($) =>
      choice(
        seq(kw("DATA"), $.identifier, optional($._type_spec), repeat($._data_additions)),
        // Structured: DATA BEGIN OF / END OF
        seq(kw("DATA"), kw("BEGIN"), kw("OF"), $.identifier, optional(kw("READ-ONLY"))),
        seq(kw("DATA"), kw("END"), kw("OF"), $.identifier),
      ),

    _data_additions: ($) =>
      choice(
        seq(kw("VALUE"), choice($._expression, kwSeq("IS INITIAL"))),
        kw("READ-ONLY"),
        seq(kw("LENGTH"), $._expression),
        seq(kw("DECIMALS"), $._expression),
      ),

    // =========================================================================
    // Phase 2: TYPES
    // =========================================================================

    class_definition: ($) =>
      seq(
        kw("CLASS"), $.identifier, kw("DEFINITION"),
        repeat($._class_def_additions),
        ".",
        optional($._class_def_body),
        kw("ENDCLASS"), ".",
      ),

    _class_def_additions: ($) =>
      choice(
        seq(kw("INHERITING"), kw("FROM"), $.identifier),
        kw("ABSTRACT"),
        kw("FINAL"),
        seq(kw("CREATE"), choice(kw("PUBLIC"), kw("PROTECTED"), kw("PRIVATE"))),
        kwSeq("FOR TESTING"),
        seq(kwSeq("RISK LEVEL"), choice(kw("HARMLESS"), kw("DANGEROUS"), kw("CRITICAL"))),
        seq(kw("DURATION"), choice(kw("SHORT"), kw("MEDIUM"), kw("LONG"))),
        seq(kw("FRIENDS"), repeat1($.identifier)),
        kw("PUBLIC"),
        kwSeq("DEFERRED"),
        seq(kwSeq("LOCAL FRIENDS"), repeat1($.identifier)),
      ),

    _class_def_body: ($) =>
      repeat1(choice(
        $.visibility_section,
        $._statement,
      )),

    visibility_section: ($) =>
      seq(
        choice(kw("PUBLIC"), kw("PROTECTED"), kw("PRIVATE")),
        kw("SECTION"),
        ".",
        repeat($._statement),
      ),

    // =========================================================================
    // Phase 3: CLASS IMPLEMENTATION
    // =========================================================================
